--- a/public/css/index.css
+++ b/public/css/index.css
@@ -32,10 +32,10 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: "Figtree";
+  font-family: 'Figtree';
   color: #d7e4e9;
   background-color: #2f3438;
-  background-image: url("/public/img/denim.webp");
+  background-image: url('/public/img/denim.webp');
   background-attachment: fixed;
 }
 
@@ -72,7 +72,8 @@ footer {
   border-radius: 0.25rem;
   transition: background-color 0.1s linear;
 }
-.button:hover:not(:active), .button:focus:not(:active) {
+.button:hover:not(:active),
+.button:focus:not(:active) {
   background: #ffffff;
 }
 
@@ -85,7 +86,7 @@ section {
 
 .title {
   font-size: 3.5rem;
-  font-family: "Playfair Display";
+  font-family: 'Playfair Display';
   line-height: 0.9;
   font-weight: 700;
   margin-bottom: 1.5rem;
