feat: synchronous timeline with animation chaining

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -89,7 +89,7 @@ section {
   line-height: 0.9;
   font-weight: 700;
   margin-bottom: 1.5rem;
-  color: $font-color-strongest;
+  color: $font-color-stronger;
 }
 
 .subtitle {
